--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Demo for MHCID</title>
   </head>
   <body>
+    <a href="css_demo.html">This is a link to the CSS demo</a>
     <h1>Demo for Interactive Technology Studio</h1>
     <p>This is a demo created by Brenon Kalu for the Master of Human-Computer Interaction & Design program at UC Irvine</p>
     <h3>Brenon Kalu</h3>
