--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Demo for Interactive Technology Studio</h1>
     <p>This is a demo created by Brenon Kalu for the Master of Human-Computer Interaction & Design program at UC Irvine</p>
     <h3>Brenon Kalu</h3>
+    
+    <a href="font-sample.html">Font Sample</a>
   </body>
 </html>
