--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h3>Brenon Kalu</h3>
     
     <a href="font-sample.html">Font Sample</a>
+    <a href="bootstrap-sample.html">Font Sample</a>
   </body>
 </html>
