--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -13,18 +13,19 @@
     
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col-4">
           Welcome
         </div>
-      </div>
-      <div class="row">
-        <div class="col">
+        <div class="col-4">
           To
+        </div>
+        <div class="col-4">
+          New York!
         </div>
       </div>
       <div class="row">
-        <div class="col">
-          New York!
+        <div class="col-12">
+            Concrete Jungle
         </div>
       </div>
     </div>
