--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -8,6 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <style>
+      h1 {
+        text-align: center;
+      }
+      
       div.col-md-4, div.col-lg-6 {
         border: 1px solid black;
         background: blue;
