--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -23,6 +23,10 @@
         background: red;
         color: white;
       }
+      
+      .btn btn-primary btn-lg {
+        margin: 0 auto;
+      }
     </style>
   </head>
   
