--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -24,7 +24,7 @@
         color: white;
       }
       
-      .btn btn-primary btn-lg {
+      button.btn btn-primary btn-lg {
         margin: 0 auto;
       }
     </style>
