--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -27,6 +27,7 @@
   </head>
   
   <body>
+    <a href="index.html">Back to Homepage</a>
     <h1>Hello, Brenon!</h1>
     
     <img class="img-fluid" src="https://upload.wikimedia.org/wikipedia/commons/8/8d/New_York_NYC.jpg" alt="statue of liberty"/>
