--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     
     <br/>
     
-    <a href="bootstrap-sample.html">Bootstrap Sample</a>
+    <a href="bootstrap-sample.html">Bootstrap Samples</a>
   </body>
 </html>
